@@ -107,3 +107,4 @@ Revision	Log Message
 105		Verify all CK2 provinces are mapped
 106		Add missing province mappings
 107		Water provinces mapped
+108		Tech group from history files
